--- a/crypto/serveur/todo.txt
+++ b/crypto/serveur/todo.txt
@@ -1,7 +1,7 @@
 $ : fonction appel la fonction de refresh token dans fourniseuer d'identite et retourne  un token
 
-
 ###  Gestion des Portefeuilles
+    test
     #### Consultation du portefeuille (manoa)
         - URL : `http://localhost:5000/portefeuille`
         - Header : `Authorization: Bearer token`
@@ -14,6 +14,7 @@ $ : fonction appel la fonction de refresh token dans fourniseuer d'identite et r
                     - Utilisateur non trouvé.
 
 
+    test
     #### Dépôt/retrait dans le portefeuille fiat 
         ##### initiation de la demande de fond $ (manoa)
             - URL : `http://localhost:5000/portefeuille/fond/demande` 
@@ -29,6 +30,7 @@ $ : fonction appel la fonction de refresh token dans fourniseuer d'identite et r
                         - Montant invalide.
                         - Token invalide.
         
+        test
         ##### Validation  (manoa)
              - URL : `http://localhost:5000/portefeuille/fond/validation`
             - Header : `Authorization: Bearer token`
@@ -54,7 +56,7 @@ $ : fonction appel la fonction de refresh token dans fourniseuer d'identite et r
             - Refuser : Message d'erreur.
                 - Erreurs possibles :
                     -erreur interne
-                    
+    test              
     #### Consultation des cours des cryptomonnaies (mikajy)
     - URL : `http://localhost:5000/cryptos/cours`
     - Méthode : GET
@@ -64,7 +66,7 @@ $ : fonction appel la fonction de refresh token dans fourniseuer d'identite et r
             - Erreurs possibles :
                 - Problème interne du serveur.
 
-
+    test
     #### Création d’une annonce de vente $ (mikajy)
     - URL : `http://localhost:5000/annonce/vente`
     - Header : `Authorization: Bearer token`
